# cex-copytrader-client

./: .env.dist  .gitignore  Makefile  README.md  app.service  pyproject.toml  requirements.txt
app/: __main__.py  configuration.py
app/api/internal/: __init__.py  admin.py
app/api/models/: models.py
app/database/: __init__.py  database.py
app/database/models/: __init__.py  keys.py
app/database/repositories/: __init__.py  keys.py
app/database/schemas/: __init__.py
app/manager/: __init__.py  manager.py
app/managers/: __init__.py  abstract.py  unified.py
app/schemas/: enums.py  models.py  types.py
app/services/: __init__.py  abstract.py  balance_notifyer.py  balance_updater.py  balance_warden.py  trader_polling.py  trader_websocket.py
app/services/connectors/: __init__.py  abstract.py  binance_conn.py
app/services/connectors/abstract/: __init__.py  exchange_connector.py  exchange_info.py  polling_service.py  trader_websocket.py
app/services/connectors/adapters/: __init__.py  abstract.py  binance_adapter.py
app/services/connectors/binance_conn/: __init__.py  _patch.py  exchange_connector.py  exchange_info.py  polling_service.py  trader_websocket.py
app/services/connectors/mexc_conn/: exchange_connector.py  exchange_info.py  trader_websocket.py
app/templates/: logs.html  status.html
app/templates/sqladmin/: base.html  create.html  list.html
app/utils/: helpers.py  patches.py
temp/: __main__.py
temp/schemas/: enums.py  exceptions.py  models.py  types.py
tests/: custom_wesocket.py
