[tool.poetry]
name = "cex-copytrader-client"
version = "0.1.0"
description = ""
authors = ["blowyourbra1n <blowyourbra1n@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
websockets = "^13.0.1"
loguru = "^0.7.2"
pydantic = "^2.9.2"
fastapi = "^0.115.0"
aiohttp = "^3.10.5"
aiofiles = "^24.1.0"
sqladmin = "^0.19.0"
python-dotenv = "^1.0.1"
itsdangerous = "^2.2.0"
uvicorn = "^0.30.6"
requests = "^2.32.3"
python-binance = "^1.0.19"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
